# mini-vla

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  package-lock.json  package.json  playwright.config.ts  playwright.perf-ci.config.ts  playwright.perf.config.ts  pyproject.toml  train.py  tsconfig.json
.githooks/: pre-push
.github/workflows/: e2e.yml  perf-nightly.yml
assets/: grammar.json  vocab.txt
assets/replay/: manifest.json
configs/: pickcube_rgb_state_bc.yaml  pickcube_state_bc.yaml
demo/: main.ts  vite.config.ts
eval/: index.html  main.ts
js/: README.md  tsconfig.json
js/capture/: index.html  main.ts  run.mjs  vite.config.ts
js/demo/: index.html  main.ts  vite.config.ts
js/eval/: closed-loop.ts  main.ts  run.mjs  vite.config.ts
js/scripts/: gen-embeddings-data.mjs
js/src/: config-public.ts  config.ts  demo.ts  embeddings.ts  examples.ts  geometry.ts  infer.ts  model.ts  rollout.ts  (+9 more)
mini_vla/: __init__.py  config.py  embeddings.py  eval.py  geometry.py  model.py  render.py  run_config.py  task.py  trainer.py  vocab_gen.py
portfolio/: README.md
scripts/: collect_or_load_demos.py  evaluate_rgb_state_bc.py  evaluate_state_bc.py  gen-embeddings-data.mjs  inspect_env.py  param_sweep.py  release.mjs  run_once.py  sweep.py  train_rgb_state_bc.py  train_state_bc.py
src/: config.ts  embeddings.ts  examples.ts  model.ts  rollout.ts  run-config.ts  scene.ts  trainer.core.ts  trainer.ts  trainer.worker.ts
tests/: test_embeddings.py  test_eval.py  test_geometry.py  test_language_warmup.py  test_task.py  test_trainer.py  test_vocab_consistency.py
(+19 files in other folders)
