[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-vla"
version = "0.1.0"
description = "Minimal visuomotor imitation learning pipeline with ManiSkill"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "torchvision>=0.17",
    "numpy>=1.24",
    "gymnasium>=0.29",
    "mani-skill>=3.0.0b18",
    "h5py>=3.10",
    "pyyaml>=6.0",
    "imageio>=2.34",
    "imageio-ffmpeg>=0.4",
    "tqdm>=4.66",
    "einops>=0.7",
]

[project.optional-dependencies]
wandb = ["wandb>=0.17"]
dev = ["ruff", "mypy"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
