[project]
name = "mini-vla"
version = "0.7.0"
description = "Python model-development source for the mini-vla language-conditioned vision-language-action policy (Keras). The js/ tree is the ported in-browser artifact for the portfolio."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "tensorflow>=2.15",
    "numpy>=1.26",
    "pillow>=10.0",
]

[project.optional-dependencies]
# Experiment tracking is opt-in — `python train.py --wandb` needs this extra.
wandb = ["wandb>=0.16"]
dev = ["pytest>=8.0"]

[project.scripts]
mini-vla-train = "train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mini_vla"]
